Fix alignment of checkboxes in monobook

--- a/resources/betafeatures.nojs.less
+++ b/resources/betafeatures.nojs.less
@@ -123,6 +123,10 @@ table.mw-htmlform-container {
 
 	.oo-ui-fieldLayout-field {
 		padding-top: 0.4em;
+
+		.skin-monobook & {
+			padding-top: 0.7em;
+		}
 	}
 	.oo-ui-labelElement-label {
 		font-size: 24px;
